--- a/app/src/main/res/menu/activity_home_drawer.xml
+++ b/app/src/main/res/menu/activity_home_drawer.xml
@@ -24,6 +24,11 @@
             android:id="@+id/contact_us"
             android:icon="@drawable/ic_contact_mail_black_24dp"
             android:title="Contact Us" />
+        <item
+            android:id="@+id/question"
+           android:title="Post A Question">
+
+        </item>
     </group>
 
 
