--- a/app/src/main/res/layout/question_resource.xml
+++ b/app/src/main/res/layout/question_resource.xml
@@ -5,14 +5,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:layout_marginLeft="10dp"
 
     android:id="@+id/layout3">
 
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/circleImageView2"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
 
         android:layout_marginStart="6dp"
         android:layout_marginTop="8dp"
