--- a/app/src/main/res/layout/activity_contact_us.xml
+++ b/app/src/main/res/layout/activity_contact_us.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -13,7 +13,7 @@
         <android.support.constraint.ConstraintLayout
             android:id="@+id/constraintLayout2"
             android:layout_width="match_parent"
-            android:layout_height="250dp"
+            android:layout_height="200dp"
             android:background="@drawable/backgound"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -22,13 +22,12 @@
         </android.support.constraint.ConstraintLayout>
 
 
-
         <android.support.constraint.ConstraintLayout
             android:id="@+id/constraintLayout"
             android:layout_width="250dp"
             android:layout_height="400dp"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="204dp"
+            android:layout_marginTop="164dp"
             android:layout_marginEnd="8dp"
             android:background="#ffffff"
             android:elevation="10dp"
@@ -106,10 +105,11 @@
 
             <EditText
                 android:id="@+id/editText10"
-                android:layout_width="205dp"
-                android:layout_height="103dp"
+                android:layout_width="202dp"
+                android:layout_height="88dp"
                 android:layout_marginStart="16dp"
                 android:ems="10"
+                android:gravity="top"
                 android:hint="enter message here"
                 android:inputType="textMultiLine"
                 android:selectAllOnFocus="false"
@@ -118,9 +118,26 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView16" />
 
+            <Button
+                android:id="@+id/button7"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                android:background="#35CEC9"
+                android:elevation="10dp"
+                android:text="Submit"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/editText10" />
+
 
         </android.support.constraint.ConstraintLayout>
 
+
+
     </android.support.constraint.ConstraintLayout>
 
-</ScrollView>
+</android.support.constraint.ConstraintLayout>
