--- a/app/src/main/res/layout/final_recycler_view_resource.xml
+++ b/app/src/main/res/layout/final_recycler_view_resource.xml
@@ -3,7 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginLeft="10dp"
-    android:background="@drawable/box">
+    android:background="@drawable/box"
+   >
 
     <TextView
         android:id="@+id/cat_textView"
@@ -11,6 +12,7 @@
         android:layout_height="wrap_content"
         android:text="Science"
         android:textColor="#35CEC9"
+        android:paddingLeft="5dp"
         />
 
     <de.hdodenhof.circleimageview.CircleImageView
