--- a/app/src/main/res/layout/final_recycler_view_resource.xml
+++ b/app/src/main/res/layout/final_recycler_view_resource.xml
@@ -18,6 +18,7 @@
     <de.hdodenhof.circleimageview.CircleImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:id="@+id/removeItem"
         android:src="@drawable/ic_close_black_24dp"
         android:layout_marginLeft="20dp"/>
 
